--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
                 <div class="product-item">
                     <a href="#"><img src="{{ student.image.url }}" alt=""></a>
                     <div class="down-content">
-                            <h4 style="text-align: center; color: red;">{{ student.fullname }}</h4>
+                        <h4 style="text-align: center; color: red;">{{ student.fullname }}</h4>
                     </div>
                 </div>
             </div>
@@ -40,6 +40,115 @@
         </div>
     </div>
 </div>
+
+<div class="container">
+    <div class="content" style="margin-bottom: 20px;">
+        <h4>Биздин агай жонундо</h4>
+    </div>
+    <div class="row">
+        <div class="photo-grid col-md-12" style="width: 100%;">
+            <img src="{% static 'assets/images/album/album1.jpg' %}" id="photo1">
+            <img src="{% static 'assets/images/album/album2.jpg' %}" id="photo2">
+            <img src="{% static 'assets/images/album/album3.jpg' %}" id="photo3">
+            <img src="{% static 'assets/images/album/album4.jpg' %}" id="photo4">
+            <img src="{% static 'assets/images/album/album5.jpg' %}" id="photo5">
+            <img src="{% static 'assets/images/album/album6.jpg' %}" id="photo6">
+            <img src="{% static 'assets/images/album/album7.jpg' %}" id="photo7">
+        </div>
+
+        <div class="col-md-12" style="margin-top: 20px;">
+            <div class="content">
+                <h4>Биздин ардактуу мугалим Каныбек Lorem ipsum dolor sit amet, consectetur
+                    adipisicing elit. A ad alias atque aut delectus ea eaque eum, eveniet excepturi,
+                    exercitationem expedita in ipsum maxime molestias nam numquam odio officiis
+                    perspiciatis porro, quas quo repellendus sint totam unde vel. Ad,
+                    explicabo.</h4>
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<style>
+    .photo-grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 10px;
+        grid-template-areas:
+            "photo1 photo2 photo3"
+            "photo1 photo4 photo5"
+            "photo6 photo7 photo5";
+    }
+    .photo-grid img {
+        width: 100%;
+        height: 400px;
+        object-fit: cover;
+    }
+    #photo1 {
+        grid-area: photo1;
+        height: 800px;
+    }
+    #photo2 {
+        grid-area: photo2;
+    }
+    #photo3 {
+        grid-area: photo3;
+    }
+    #photo4 {
+        grid-area: photo4;
+    }
+    #photo5 {
+        grid-area: photo5;
+        height: 800px;
+    }
+    #photo6 {
+        grid-area: photo6;
+    }
+    #photo7 {
+        grid-area: photo7;
+    }
+
+
+    @media (max-width: 990px) {
+        .photo-grid {
+            gap: 5px;
+        }
+        .photo-grid img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+        }
+        #photo1 {
+            grid-area: photo1;
+            height: 300px;
+        }
+        #photo2 {
+            grid-area: photo2;
+        }
+        #photo3 {
+            grid-area: photo3;
+        }
+        #photo4 {
+            grid-area: photo4;
+        }
+        #photo5 {
+            grid-area: photo5;
+            height: 300px;
+        }
+        #photo6 {
+            grid-area: photo6;
+        }
+        #photo7 {
+            grid-area: photo7;
+        }
+    }
+
+
+
+
+</style>
+
 
 <div class="best-features">
     <div class="container">
