--- a/templates/accreditation.html
+++ b/templates/accreditation.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="left-content">
-                    <h2 style="font-weight: bold;"><br>Уставтар:</h2>
+                    <h2 style="font-weight: bold;"><br>Укуктук-ченемдик актылар:</h2>
                     <ul class="featured-list">
                         {% for ustav in accredit.ustavtar.all %}
                         <li>
