--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,57 @@
         <div class="banner-item-01" style="background-image: url({{ banner.image.url }})">
             <div class="text-content">
                 <h4>{{ banner.title }}</h4>
-                <h2>{{ banner.desc }}</h2>
+                <h2 style="color: orange; font-weight: bold;">{{ banner.desc }}</h2>
             </div>
         </div>
         {% endfor %}
     </div>
 </div>
 <!-- Banner Ends Here -->
+
+<div class="latest-products2">
+    <div class="container">
+        <div class="row">
+            <div class="numberstatic">
+                <div class="numbericon">
+                    <img src="{% static 'assets/images/icons/school-xxl.png' %}" alt="">
+                </div>
+                <div class="numbertext">
+                    <p>29</p>
+                    <p>ЖЫЛ МЕКТЕПКЕ</p>
+                </div>
+            </div>
+            <div class="numberstatic">
+                <div class="numbericon">
+                    <img src="{% static 'assets/images/icons/teacher-xxl.png' %}" alt="">
+                </div>
+                <div class="numbertext">
+                    <p>47</p>
+                    <p>МУГАЛИМ</p>
+                </div>
+            </div>
+            <div class="numberstatic">
+                <div class="numbericon">
+                    <img src="{% static 'assets/images/icons/student-xxl.png' %}" alt="">
+                </div>
+                <div class="numbertext">
+                    <p>450</p>
+                    <p>ОКУУЧУ</p>
+                </div>
+            </div>
+            <div class="numberstatic">
+                <div class="numbericon">
+                    <img src="{% static 'assets/images/icons/book-stack-xxl.png' %}" alt="">
+                </div>
+                <div class="numbertext">
+                    <p>5000</p>
+                    <p>КИТЕП</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="latest-products">
     <div class="container">
@@ -70,6 +114,44 @@
 </div>
 
 <style>
+    .latest-products2 {
+      background-color: #f5f5f5;
+      padding: 20px;
+    }
+
+    .numberstatic {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      margin: 10px;
+      background-color: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .numbericon img {
+      width: 50px;
+    }
+
+    .numbertext {
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    .numbertext p:first-child {
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    .numbertext p:last-child {
+      font-size: 14px;
+      color: gray;
+    }
+
+
     .photo-grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -109,8 +191,56 @@
         grid-area: photo7;
     }
 
+</style>
 
+<style>
     @media (max-width: 990px) {
+
+    .banner .text-content h2 {
+        color: #fff;
+        font-size: 20px;
+        text-transform: uppercase;
+        letter-spacing: 5px;
+    }
+
+    .latest-products2 {
+      background-color: #f5f5f5;
+      padding: 7px;
+    }
+
+    .numberstatic {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      margin: 4px;
+      background-color: white;
+      padding: 0px;
+      border-radius: 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .numbericon img {
+      width: 24px;
+      padding-top: 4px;
+    }
+
+    .numbertext {
+      margin-top: 0px;
+      text-align: center;
+    }
+
+    .numbertext p:first-child {
+      font-size: 14px;
+      font-weight: bold;
+    }
+
+    .numbertext p:last-child {
+      font-size: 10px;
+      color: gray;
+    }
+
         .photo-grid {
             gap: 5px;
         }
@@ -147,39 +277,10 @@
 
 
 
+
+
+
 </style>
-
-
-<div class="best-features">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-heading">
-                    <h2>Биз сан менен</h2>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="left-content">
-                    <h4>Биздин мектептин статистикасы</h4>
-                    <p style="font-size: 18px; font-weight: bold;">№14 Абдулла Тангатаров атындагы
-                        интернат-гимназиясы 1994-жылы негизделген.</p>
-                    <ul class="featured-list">
-                        <li style="font-size: 18px;">Окуучулардын саны - 450</li>
-                        <li style="font-size: 18px;">Мугалимдердин саны - 47</li>
-                        <li style="font-size: 18px;">Алтын сертификат алгандардын саны - 2</li>
-                        <li style="font-size: 18px;">Жакшы окугандардын саны - 450</li>
-                    </ul>
-
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="right-image">
-                    <img src="{% static 'assets/images/feature-image.jpg' %}" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
 <!-- Page Content END -->
 {% endblock %}
     
