feature/add/aboutgimnasium_aboutfounder/change/usulbirik_and_sometext/

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
 </div>
 <!-- Banner Ends Here -->
 
-<div class="latest-products2">
+<div class="staticnumber">
     <div class="container">
         <div class="row">
             <div class="numberstatic">
@@ -27,7 +27,7 @@
                 </div>
                 <div class="numbertext">
                     <p>29</p>
-                    <p>ЖЫЛ МЕКТЕПКЕ</p>
+                    <p class="yearschool">ЖЫЛ ГИМНАЗИЯГА</p>
                 </div>
             </div>
             <div class="numberstatic">
@@ -35,7 +35,7 @@
                     <img src="{% static 'assets/images/icons/teacher-xxl.png' %}" alt="">
                 </div>
                 <div class="numbertext">
-                    <p>47</p>
+                    <p>44</p>
                     <p>МУГАЛИМ</p>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                     <img src="{% static 'assets/images/icons/student-xxl.png' %}" alt="">
                 </div>
                 <div class="numbertext">
-                    <p>450</p>
+                    <p>507</p>
                     <p>ОКУУЧУ</p>
                 </div>
             </div>
@@ -53,14 +53,13 @@
                     <img src="{% static 'assets/images/icons/book-stack-xxl.png' %}" alt="">
                 </div>
                 <div class="numbertext">
-                    <p>5000</p>
+                    <p>20000</p>
                     <p>КИТЕП</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 <div class="latest-products">
     <div class="container">
@@ -85,36 +84,108 @@
     </div>
 </div>
 
-<div class="container">
-    <div class="content" style="margin-bottom: 20px;">
-        <h4>Биздин агай жонундо</h4>
-    </div>
-    <div class="row">
-        <div class="photo-grid col-md-12" style="width: 100%;">
-            <img src="{% static 'assets/images/album/album1.jpg' %}" id="photo1">
-            <img src="{% static 'assets/images/album/album2.jpg' %}" id="photo2">
-            <img src="{% static 'assets/images/album/album3.jpg' %}" id="photo3">
-            <img src="{% static 'assets/images/album/album4.jpg' %}" id="photo4">
-            <img src="{% static 'assets/images/album/album5.jpg' %}" id="photo5">
-            <img src="{% static 'assets/images/album/album6.jpg' %}" id="photo6">
-            <img src="{% static 'assets/images/album/album7.jpg' %}" id="photo7">
-        </div>
+<div class="best-features about-features" style="margin-bottom: 100px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-heading">
+                    <h2>Гимназия жөнүндө</h2>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="left-content">
+                    <p style="font-size: 18px; font-weight: bold; text-indent: 40px;">
+                        №14 Абдулла Тангатаров атындагы интернат-гимназиясы 1994-жылы 1-сентябрда
+                        Ош облусунун Өзгөн районундагы Куршаб айылында ачылган .Гимназияга
+                        1995-жылдын 23-майында Кыргыз Республикасынын илим, билим жана маданият
+                        министирлигинин коллегиясынын №318 чечими менен лицензия берилген. <br>
+                        Гимназия Кыргыз Республикасынын өкмөтүнүн
+                        мектеп-гимназиялар жөнүндө жобосунун негизинде түзүлгөн, уставы бар.
+                        Гимназиянын уставы юридикалык каттоодон 20-февраль 2010-жылы өткөн, каттоо
+                        номери 110799-3306-у-е., кайра каттоодон 10-декабрь 2015-жылы өткөн, каттоо
+                        номери S16/0119, кайра каттоодон 07-март 2017-жылы өткөн, каттоо номери
+                        ГПЮ0025199. <br>
+                        Гимназия мурдагы Ленин атындагы мектеп - интернатынын базасында 1994-жылы
+                        ачылган. А.Тангатаров атындагы гимназиянын 3 этаждуу жана бир этаждуу
+                        корпустары мурдагы интернаттын жатаканалары болгон жана алар бүгүнкү күндө
+                        окуу корпусу катары ынгайлаштырылган. <br>
+                        Гимназиянын жайгашкан жери: Өзгөн району, Куршаб айылы Айти Камчыбеков
+                        көчөсү № 192 телефону: (03233) 3 23 81
+                        Окутуунун тили: Кыргыз тилде
+                    </p>
+                    <ul class="social-icons">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://instagram.com/14_tangatarov_media"><i
+                                class="fa fa-instagram"></i></a></li>
+                        <li><a href="https://t.me/tangatarovmedia"><i
+                                class="fa fa-telegram"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="right-content">
+                    <img src="{% static 'assets/images/tangatarov.jpeg' %}"
+                         style="width: 100%; max-height: 600px;"
+                         alt="">
 
-        <div class="col-md-12" style="margin-top: 20px;">
-            <div class="content">
-                <h4>Биздин ардактуу мугалим Каныбек Lorem ipsum dolor sit amet, consectetur
-                    adipisicing elit. A ad alias atque aut delectus ea eaque eum, eveniet excepturi,
-                    exercitationem expedita in ipsum maxime molestias nam numquam odio officiis
-                    perspiciatis porro, quas quo repellendus sint totam unde vel. Ad,
-                    explicabo.</h4>
-
+                </div>
             </div>
         </div>
     </div>
 </div>
 
+<div class="container">
+    <div class="content" style="margin-bottom: 20px;">
+        <h4>Гимназиянын негиздөөчүсү жана алгачкы директору</h4>
+    </div>
+    <div class="row">
+        <div class="photo-grid col-md-6" style="width: 100%;">
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="{% static 'assets/images/album/album1.jpeg' %}" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="{% static 'assets/images/album/album2.jpeg' %}" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="{% static 'assets/images/album/album3.jpeg' %}" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="{% static 'assets/images/album/album4.jpeg' %}" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="{% static 'assets/images/album/album5.jpeg' %}" style="width:100%">
+                </div>
+                <div class="mySlides fade">
+                    <img src="{% static 'assets/images/album/album6.jpeg' %}" style="width:100%">
+                </div>
+            </div>
+            <div style="text-align:center">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+
+        </div>
+
+        <div class="col-md-6">
+            <div class="content">
+                <h4>Тангатаров Каныбек 1965-жылы Lorem ipsum dolor sit amet, consectetur adipisicing
+                    elit. Adipisci deleniti dolor dolorum ducimus eveniet facere impedit,
+                    laboriosam, minus, quos rerum tempora tempore! Aspernatur cumque facilis, odit
+                    perferendis quaerat quasi quis quisquam sunt. Ab alias blanditiis consectetur
+                    cum debitis laudantium optio, perspiciatis quos saepe suscipit ullam.</h4>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <style>
-    .latest-products2 {
+    .staticnumber {
       background-color: #f5f5f5;
       padding: 20px;
     }
@@ -150,47 +221,6 @@
       font-size: 14px;
       color: gray;
     }
-
-
-    .photo-grid {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        gap: 10px;
-        grid-template-areas:
-            "photo1 photo2 photo3"
-            "photo1 photo4 photo5"
-            "photo6 photo7 photo5";
-    }
-    .photo-grid img {
-        width: 100%;
-        height: 400px;
-        object-fit: cover;
-    }
-    #photo1 {
-        grid-area: photo1;
-        height: 800px;
-    }
-    #photo2 {
-        grid-area: photo2;
-    }
-    #photo3 {
-        grid-area: photo3;
-    }
-    #photo4 {
-        grid-area: photo4;
-    }
-    #photo5 {
-        grid-area: photo5;
-        height: 800px;
-    }
-    #photo6 {
-        grid-area: photo6;
-    }
-    #photo7 {
-        grid-area: photo7;
-    }
-
 </style>
 
 <style>
@@ -241,38 +271,15 @@
       color: gray;
     }
 
-        .photo-grid {
-            gap: 5px;
-        }
-        .photo-grid img {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-        }
-        #photo1 {
-            grid-area: photo1;
-            height: 300px;
-        }
-        #photo2 {
-            grid-area: photo2;
-        }
-        #photo3 {
-            grid-area: photo3;
-        }
-        #photo4 {
-            grid-area: photo4;
-        }
-        #photo5 {
-            grid-area: photo5;
-            height: 300px;
-        }
-        #photo6 {
-            grid-area: photo6;
-        }
-        #photo7 {
-            grid-area: photo7;
-        }
+    .yearschool {
+      line-height: 12px;
     }
+}
+
+
+
+
+
 
 
 
@@ -281,6 +288,80 @@
 
 
 </style>
+
+<style>
+.slideshow-container {
+  max-width: 400px;
+  position: relative;
+  margin: auto;
+}
+
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active2 {
+  background-color: #717171;
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 4s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+
+
+
+
+
+
+
+
+
+</style>
+
+<script>
+let slideIndex = 0;
+showSlides();
+
+function showSlides() {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  slideIndex++;
+  if (slideIndex > slides.length) {slideIndex = 1}
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active2", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active2";
+  setTimeout(showSlides, 4000); // Change image every 2 seconds
+}
+
+
+
+
+
+
+
+
+
+
+</script>
 <!-- Page Content END -->
 {% endblock %}
     
