--- a/templates/usuldukbirikme.html
+++ b/templates/usuldukbirikme.html
@@ -28,7 +28,7 @@
             <div class="col-md-12">
                 <ul class="accordion">
                     <li>
-                        <a style="font-size: 30px;">Табигый Илимдер</a>
+                        <a style="font-size: 30px;">Кыргыз тили усулдук бирикмеси</a>
                         <div class="content">
                             <p style="font-size: 20px;">
                                 {% for teacher in teachers %}
@@ -41,7 +41,7 @@
                         </div>
                     </li>
                     <li>
-                        <a style="font-size: 30px;">Кыргыз Тили</a>
+                        <a style="font-size: 30px;">Орус тили усулдук бирикмеси</a>
                         <div class="content">
                             <p style="font-size: 20px;">
                                 {% for teacher in teachers %}
@@ -54,7 +54,7 @@
                         </div>
                     </li>
                     <li>
-                        <a style="font-size: 30px;">Орус Тили</a>
+                        <a style="font-size: 30px;">Англис тили усулдук бирикмеси</a>
                         <div class="content">
                             <p style="font-size: 20px;">
                                 {% for teacher in teachers %}
@@ -67,7 +67,7 @@
                         </div>
                     </li>
                     <li>
-                        <a style="font-size: 30px;">Англис Тили</a>
+                        <a style="font-size: 30px;">Табигый илимдер усулдук бирикмеси</a>
                         <div class="content">
                             <p style="font-size: 20px;">
                                 {% for teacher in teachers %}
@@ -80,7 +80,7 @@
                         </div>
                     </li>
                     <li>
-                        <a style="font-size: 30px;">Физика</a>
+                        <a style="font-size: 30px;">Так илимдер усулдук бирикмеси</a>
                         <div class="content">
                             <p style="font-size: 20px;">
                                 {% for teacher in teachers %}
@@ -93,7 +93,7 @@
                         </div>
                     </li>
                     <li>
-                        <a style="font-size: 30px;">Математика</a>
+                        <a style="font-size: 30px;">Социалдык илимдер усулдук бирикмеси</a>
                         <div class="content">
                             <p style="font-size: 20px;">
                                 {% for teacher in teachers %}
@@ -106,7 +106,7 @@
                         </div>
                     </li>
                     <li>
-                        <a style="font-size: 30px;">Технология</a>
+                        <a style="font-size: 30px;">Технология жана ден-соолук маданияты усулдук бирикмеси</a>
                         <div class="content">
                             <p style="font-size: 20px;">
                                 {% for teacher in teachers %}
