change_usuldukbirikme_to_photo_name/

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
                             Эндаумент</a>
                     </li>
                     <li class="nav-item {{ usulbirik }}">
-                        <a class="nav-link" href="{% url 'usulbirik' %}" style="font-weight: bold;">
+                        <a class="nav-link" href="{% url 'usulbirik' '1' %}" style="font-weight: bold;">
                             Усулдук Бирикме</a>
                     </li>
                     <li class="nav-item dropdown {{ accreditation }}">
