--- a/templates/usuldukbirikme.html
+++ b/templates/usuldukbirikme.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<!-- Page Content -->
 <div class="page-heading contact-heading header-text">
     <div class="container">
         <div class="row">
@@ -16,112 +15,113 @@
 </div>
 
 
-<div class="send-message">
+<div class="best-features about-features">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="section-heading">
-                    <h2 style="font-weight: bold;">Усулдук Бирикмелер</h2>
+                    <h2>Усулдук Бирикмелер</h2>
                 </div>
             </div>
-
-            <div class="col-md-12">
-                <ul class="accordion">
-                    <li>
-                        <a style="font-size: 30px;">Кыргыз тили усулдук бирикмеси</a>
-                        <div class="content">
-                            <p style="font-size: 20px;">
-                                {% for teacher in teachers %}
-                                {% if teacher.birikme == "1" %}
-
-                                {{ teacher.fullname }}<br>
-                                {% endif %}
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <a style="font-size: 30px;">Орус тили усулдук бирикмеси</a>
-                        <div class="content">
-                            <p style="font-size: 20px;">
-                                {% for teacher in teachers %}
-                                {% if teacher.birikme == "2" %}
-
-                                {{ teacher.fullname }}<br>
-                                {% endif %}
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <a style="font-size: 30px;">Англис тили усулдук бирикмеси</a>
-                        <div class="content">
-                            <p style="font-size: 20px;">
-                                {% for teacher in teachers %}
-                                {% if teacher.birikme == "3" %}
-
-                                {{ teacher.fullname }}<br>
-                                {% endif %}
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <a style="font-size: 30px;">Табигый илимдер усулдук бирикмеси</a>
-                        <div class="content">
-                            <p style="font-size: 20px;">
-                                {% for teacher in teachers %}
-                                {% if teacher.birikme == "4" %}
-
-                                {{ teacher.fullname }}<br>
-                                {% endif %}
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <a style="font-size: 30px;">Так илимдер усулдук бирикмеси</a>
-                        <div class="content">
-                            <p style="font-size: 20px;">
-                                {% for teacher in teachers %}
-                                {% if teacher.birikme == "5" %}
-
-                                {{ teacher.fullname }}<br>
-                                {% endif %}
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <a style="font-size: 30px;">Социалдык илимдер усулдук бирикмеси</a>
-                        <div class="content">
-                            <p style="font-size: 20px;">
-                                {% for teacher in teachers %}
-                                {% if teacher.birikme == "6" %}
-
-                                {{ teacher.fullname }}<br>
-                                {% endif %}
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <a style="font-size: 30px;">Технология жана ден-соолук маданияты усулдук бирикмеси</a>
-                        <div class="content">
-                            <p style="font-size: 20px;">
-                                {% for teacher in teachers %}
-                                {% if teacher.birikme == "7" %}
-
-                                {{ teacher.fullname }}<br>
-                                {% endif %}
-                                {% endfor %}
-                            </p>
-                        </div>
-                    </li>
-                </ul>
+            <div class="col-md-3">
+                <!-- Sidebar -->
+                <div class="position-sticky" style="margin-bottom: 10px;">
+                    <div class="list-group list-group-flush mx-3 mt-4">
+                        <a href="{% url 'usulbirik' '1' %}"
+                           class="list-group-item list-group-item-action py-2 ripple {{ active1 }}"
+                           aria-current="true">
+                            <span style="font-weight: bold;">Кыргыз тили у-б</span>
+                        </a>
+                        <a href="{% url 'usulbirik' '2' %}"
+                           class="list-group-item list-group-item-action py-2 ripple {{ active2 }}">
+                            <span style="font-weight: bold;">Орус тили у-б</span>
+                        </a>
+                        <a href="{% url 'usulbirik' '3' %}"
+                           class="list-group-item list-group-item-action py-2 ripple {{ active3 }}">
+                            <span style="font-weight: bold;">Англис тили у-б</span>
+                        </a>
+                        <a href="{% url 'usulbirik' '4' %}"
+                           class="list-group-item list-group-item-action py-2 ripple {{ active4 }}">
+                            <span style="font-weight: bold;">Табигый илимдер у-б</span>
+                        </a>
+                        <a href="{% url 'usulbirik' '5' %}"
+                           class="list-group-item list-group-item-action py-2 ripple {{ active5 }}">
+                            <span style="font-weight: bold;">Так илимдер у-б</span>
+                        </a>
+                        <a href="{% url 'usulbirik' '6' %}"
+                           class="list-group-item list-group-item-action py-2 ripple {{ active6 }}">
+                            <span style="font-weight: bold;">Социалдык илимдер у-б</span>
+                        </a>
+                        <a href="{% url 'usulbirik' '7' %}"
+                           class="list-group-item list-group-item-action py-2 ripple {{ active7 }}">
+                            <span style="font-weight: bold;">
+                                Технология жана ден-соолук маданияты у-б
+                            </span>
+                        </a>
+                    </div>
+                </div>
+                <!-- Sidebar -->
             </div>
+            {% for teacher in teachers_list %}
+            <div class="col-md-3">
+                <div class="team-member">
+                    <div class="thumb-container">
+                        <img src="{{ teacher.image.url }}" alt=""
+                             style="max-width: 100%; height: auto;">
+
+                    </div>
+                    <div class="down-content">
+                        <h4>{{ teacher.fullname }}</h4>
+                        <span>{{ teacher.biography }}</span>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
+
+
+<style>
+body {
+  background-color: #fbfbfb;
+}
+.container {
+    max-width: 95%;
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  padding: 58px 0 0;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
+  width: 240px;
+  z-index: 600;
+}
+
+.sidebar .active {
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
+}
+
+.list-group-item.active {
+    background-color: #ffa900;
+    color: black;
+    border-color: black;
+}
+.sidebar-sticky {
+  position: relative;
+  top: 0;
+  height: calc(100vh - 48px);
+  padding-top: 0.5rem;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+
+
+
+</style>
 
 {% endblock %}
